plugin/src/test/files/neg/orphan_hk.check
orphan_hk.scala:20: error: Orphan instance.
  implicit val foo1: Foo[Bar] = new Foo[Bar] {} // bad
                                    ^
orphan_hk.scala:24: error: Orphan instance.
    implicit val foo2: Foo[Bar] = new Foo[Bar] {} // bad
                                      ^
two errors found
